# mcp-windbg

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_CN.md  config.example.toml  mcp-config.example.json
docs/: SETUP.md  SETUP_CN.md
src/: cdb.rs  error.rs  lib.rs  main.rs  server.rs  session.rs  tools.rs  types.rs  utils.rs
