[package]
name = "mcp-windbg-rs"
version = "0.1.0"
edition = "2021"
authors = ["MCP WinDbg Contributors"]
description = "A high-performance Model Context Protocol server for Windows crash dump analysis"
license = "AGPL-3.0-or-later"
repository = "https://github.com/yourusername/mcp-windbg-rs"

[[bin]]
name = "mcp-windbg-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
rmcp = { version = "0.8.5", features = ["transport-io", "server"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
